added custom recycler layout project

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /propertyanimation/propertyanimation.iml
 /crossfadeviews/crossfadeviews.iml
 /transitions/transitions.iml
+/customrecyclerlayout/*.iml
