--- a/endlessrecycler/build.gradle
+++ b/endlessrecycler/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.example.vkirillov.customrecyclerlayout"
+        applicationId "com.example.vkirillov.endlessrecycler"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
@@ -24,6 +24,4 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.1.0'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'org.apache.commons:commons-io:1.3.2'
 }
