Removed and unversioned unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+/.idea/*.*
 .DS_Store
 /build
 /captures
@@ -13,3 +12,5 @@
 /alienrobots/*.iml
 /gridview/*.iml
 /*/*.iml
+
+.idea
