Animated recycler view project added Endless recycler view project modified

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
+/build
+.idea
+/*/*.iml
+/*.iml
 .gradle
 /local.properties
-/.idea/*.*
-.DS_Store
-/build
-/captures
-/propertyanimation/propertyanimation.iml
-/crossfadeviews/crossfadeviews.iml
-/transitions/transitions.iml
-/customrecyclerlayout/*.iml
-*.iml
-/alienrobots/*.iml
-/gridview/*.iml
-/*/*.iml
-
-.idea
