--- a/animatedrecycler/build.gradle
+++ b/animatedrecycler/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.example.vkirillov.endlessrecycler"
+        applicationId "com.example.vkirillov.animatedrecycler"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
